Fixed some bugs: map covering the auth page, some overlapping css properties

--- a/client/src/pages/map/mapSearch.css
+++ b/client/src/pages/map/mapSearch.css
@@ -2,5 +2,6 @@
 
 .leaflet-container {
   height: 100%;
+  z-index: -1;
 
 }
